<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.where_arh.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_origins"
        android:name="com.example.where_arh.ui.origins.OriginsFragment"
        android:label="@string/menu_origins"
        tools:layout="@layout/fragment_origins" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.where_arh.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.where_arh.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_settings" />
</navigation>